--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -10,6 +10,15 @@
   .footer {
     max-width: 90.625%;
     padding-top: 88px;
+    margin: 0 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    max-width: 90.625%;
+    padding-top: 88px;
+    margin: 0 24px;
   }
 }
 
